--- a/.github/workflows/open-commit.yml
+++ b/.github/workflows/open-commit.yml
@@ -2,9 +2,9 @@ name: Open Commit
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "release" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "release" ]
 
 jobs:
   build:
