--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,14 +19,19 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    # setup
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: seed-of-apricot/issue-list-readme@v1.1.0
+      - name: checkout
+        uses: actions/checkout@v2
+      - name: rewriteReadme
+        uses: seed-of-apricot/issue-list-readme@v1.1.0
         with:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
-
+          pattern: '<!-- issueTable -->' # suffixing "Demo" for this readme
+          labels: 'good first issue'
+          state: 'open'
+# you need to add, commit and push here
+# otherwise the changes will not be pushed back into master
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
