--- a/.github/workflows/auto-list-readme.yml
+++ b/.github/workflows/auto-list-readme.yml
@@ -22,10 +22,8 @@ jobs:
         with:
           GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
           pattern: '<!-- issueTable -->' # suffixing "Demo" for this readme
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
+      - name: Code Todo Bot
+        uses: bilalshaikh42/todo@v0.0.1
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
