--- a/.github/workflows/auto-list-readme.yml
+++ b/.github/workflows/auto-list-readme.yml
@@ -24,6 +24,9 @@ jobs:
           pattern: '<!-- issueTable -->' # suffixing "Demo" for this readme
       - name: Code Todo Bot
         uses: bilalshaikh42/todo@v0.0.1
+        runs:
+          using: "node14"
+          main: "action.js"
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
