--- a/.github/workflows/todo-to-issue.yml
+++ b/.github/workflows/todo-to-issue.yml
@@ -20,4 +20,5 @@ jobs:
           MANUAL_COMMIT_REF: ${{ inputs.MANUAL_COMMIT_REF }}
           MANUAL_BASE_REF: ${{ inputs.MANUAL_BASE_REF }}
         with:
-          LANGUAGES: "../../syntax.json"
+          LANGUAGES: "./syntax.json"
+          AUTO_ASSIGN: true
