--- a/.github/workflows/todo-to-issue.yml
+++ b/.github/workflows/todo-to-issue.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: "ubuntu-latest"
     steps:
-      - uses: "actions/checkout@v3"
+      - uses: alstr/todo-to-issue-action@v4.13
       - name: "TODO to Issue"
         uses: "alstr/todo-to-issue-action@master"
         env:
